# chess-rtk

./: .gitignore  AGENTS.md  LICENSE.txt  PROJECT_MAP.md  README.md  TODO.txt  URGENT.md  install.sh  package.json
.github/workflows/: ci.yml
assets/: crtk-github-banner.dot  crtk-position-toolbox.dot
assets/diagrams/: crtk-agentic-commands.dot  crtk-lc0-cnn.dot  crtk-mining-gates.dot  crtk-pipeline-overview.dot  crtk-position-toolbox.dot  crtk-t5-pipeline.dot  crtk-tagging-flow.dot
assets/puzzles/: difficult-lichess-10k.csv
config/: book.eco.toml  cli.config.toml  cli.lc0.config.toml  default.engine.toml  lc0.engine.toml
docs/: CRTK_IMPROVEMENT_PLAN.md  ai-agents.html  architecture.html  book-publishing.html  build-and-install.html  cli-command-guide.html  command-cheatsheet.html  command-reference.html  configuration.html  datasets.html  development-notes.html  engine-strength-tuning.html  example-commands.html  faq.html  filter-dsl.html  getting-started.html  glossary.html  gpu.html  gui-architecture.html  in-house-engine.html  index.html  lc0.html  manual.html  mining.html  outputs-and-logs.html  piece-tags.html  quality-and-testing.html  releasing.html  review-to-study.html  roadmap.html  search-index.js  serve.html  site.js  styles.css  support.html  t5.html  tag-reference.html  tagging-implementation-plan.html  troubleshooting.html  use-cases.html  (+3 more)
docs/ui-redraws/: analyze.html  draw.html  gen.py  play.html  relations.html  solve.html
models/: README.md
native-cuda/: README.md  lc0j_cuda_jni.cu
native/common/: lc0_bt4_gpu_impl.inl  otis_gpu_impl.inl  perft_core.h  perft_gpu_impl.inl
native/cuda/: CMakeLists.txt  README.md  lc0_bt4_cuda_jni.cu  lc0_cnn_cuda_jni.cu  lc0j_cuda_jni.cu  otis_cuda_jni.cu  perft_cuda_jni.cu  t5_cuda_jni.cu
native/oneapi/: CMakeLists.txt  README.md  lc0_bt4_oneapi_jni.cpp  lc0_cnn_oneapi_jni.cpp  lc0j_oneapi_jni.cpp  otis_oneapi_jni.cpp  perft_oneapi_jni.cpp  t5_oneapi_jni.cpp
native/rocm/: CMakeLists.txt  README.md  lc0_bt4_rocm_jni.hip  lc0_cnn_rocm_jni.hip  lc0j_rocm_jni.hip  otis_rocm_jni.hip  perft_rocm_jni.hip  t5_rocm_jni.hip
native/test/: perft_host_jni_shim.cpp  perft_host_test.cpp
reports/: gui-architecture-inventory.md  java-diagnostics-known-stale.txt  java-diagnostics-triage.md  loses_material_detector.java.txt
schemas/: crtk.cli.catalog.v1.schema.json  crtk.dataset.manifest.v1.schema.json  crtk.pgn.store.manifest.v1.schema.json  crtk.record.training-jsonl.v1.schema.json  crtk.record.v2.schema.json  crtk.review.ply.v1.schema.json  crtk.review.study_unit.v1.schema.json
scripts/: analysis_pipeline.py  azure_tag_text.py  build_docs_site.py  build_lock.sh  build_manual_pdf.py  build_t5_dataset.py  capture_workbench_preview.sh  check_no_weights_tracked.sh  convert_lc0_bt4_to_bin.py  export_embedded_piece_pngs.py  fetch_lc0_net.sh  generate_github_banner.sh  generate_python_sdk.py  generate_vector_piece_svgs.py  generate_whitesur_rook_logo.py  inspect_java_diagnostics.sh  launch_workbench_preview.sh  make_release_linux_cuda.sh  make_runtime_linux.sh  puzzle_azure.py  puzzle_tags.py  run_regression_suite.sh  run_svg_render_self_test.sh  uninstall.sh  update.sh  workbench_shots.sh
scripts/deprecated/: README.md
scripts/proto/: net_pb2.py
sdk/python/: crtk_client.py
src/application/: Config.java  Main.java  Pool.java
src/test/: Tests.java
src/testing/: AdjacentJump.java  Arguments.java  BT4RegressionTest.java  BookRegressionTest.java  BooleansRegressionTest.java  BuiltInEngineRegressionTest.java  CLICommandRegressionTest.java  Chess960SetupRegressionTest.java  ChessArtOfChessCommandRegressionTest.java  ChessBookCommandRegressionTest.java  ChessBookCoverCommandRegressionTest.java  ChessILoveChessCommandRegressionTest.java  ChessPDFCommandRegressionTest.java  ChessPDFRegressionTest.java  ChessPdfCommandRegressionTest.java  ChessPdfRegressionTest.java  ClassicalEvaluationBreakdownTest.java  ClassifierModelRegressionTest.java  (+134 more)
tag/: GAME_ANALYSIS.md  PROMPTS.md  README-chatgpt-move.md  README-chatgpt-paraphrase.md  README-chatgpt-sequence.md  README-chatgpt-stitch.md  README-chatgpt.md  README.md  SCHEMA.md
wiki/: Home.md  README.md  ai-agents.md  architecture.md  book-publishing.md  build-and-install.md  cli-command-guide.md  command-cheatsheet.md  command-reference.md  configuration.md  datasets.md  development-notes.md  engine-strength-tuning.md  example-commands.md  faq.md  filter-dsl.md  getting-started.md  glossary.md  gpu.md  gui-architecture.md  in-house-engine.md  lc0.md  mining.md  outputs-and-logs.md  piece-tags.md  quality-and-testing.md  releasing.md  review-to-study.md  roadmap.md  serve.md  study-workspace.md  support.md  t5.md  tag-reference.md  tagging-implementation-plan.md  troubleshooting.md  use-cases.md  workbench-design-guide.md  workbench.md
(+1202 files in other folders)
